automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a:visited {
 
 .student-card {
   position: relative;
-  background-image: url("https://photos.app.goo.gl/2cw9uBOUkn1oM53R2");
+  background-image: url("https://photos.google.com/share/AF1QipMvimP2cSuyuC2rgkcRhSgBb-4HdmeNZ6REc8r6pliPTqPfAuar8mpwCn5vzzxA5w?key=V2RHZXliX09pLTJUeHJCcWowUFBGd3p0eHlxanNn");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
