--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a:visited {
 
 .student-card {
   position: relative;
-  background-image: url("https://photos.google.com/share/AF1QipMvimP2cSuyuC2rgkcRhSgBb-4HdmeNZ6REc8r6pliPTqPfAuar8mpwCn5vzzxA5w?key=V2RHZXliX09pLTJUeHJCcWowUFBGd3p0eHlxanNn");
+  background-image: url("https://www.amazon.com/photos/share/F5D5zb8KZCJKZwppMyuTRA0T1n8H0PRi47gNNt38mFt");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
