automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a:visited {
 
 .student-card {
   position: relative;
-  background-image: url("https://www.amazon.com/photos/share/F5D5zb8KZCJKZwppMyuTRA0T1n8H0PRi47gNNt38mFt");
+  background-image: url("https://avatars2.githubusercontent.com/u/36864968?s=460&v=4");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
