--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ a:visited {
 
 .student-card {
   position: relative;
-  background-image: url("https://avatars2.githubusercontent.com/u/36864968.jpeg");
+  background-image: url("https://avatars2.githubusercontent.com/u/36864968.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
