--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ a:visited {
 }
 
 .profile-photo {
- background-image: url("https://photos.app.goo.gl/OxmKU8b4Bhwne4hp2");
+ background-image: url("https://learn-verified.s3.amazonaws.com/banner-photo-placeholder.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
