--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#marcus-jun-cover{
+  background-image: url("")
+}
+
+#marcus-jun-card{
+  background-image: url("https://photos.app.goo.gl/6bout7LWHHIN80rI2")
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
