--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 #marcus-jun-cover{
-  background-image: url("https://photos.app.goo.gl/o9ntyvRkXWhVEIif1")
+  background-image: url("https://imgur.com/a/1RKnr")
 }
 
 #marcus-jun-card{
