--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 #marcus-jun-cover{
-  background-image: url("https://imgur.com/a/1RKnr")
+  background-image: url("https://i.imgur.com/Kgex97G.jpg")
 }
 
 #marcus-jun-card{
