automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ a:visited {
 }
 
 #marcus-jun-card{
-  background-image: url("https://photos.app.goo.gl/6bout7LWHHIN80rI2")
+  background-image: url("https://i.imgur.com/ZKbTehq.jpg")
 }
 
 .view-profile-div {
