--- a/css/styles.css
+++ b/css/styles.css
@@ -164,11 +164,11 @@ a:visited {
 }
 
 #marcus-jun-cover{
-  background-image: url("https://i.imgur.com/Kgex97G.jpg")
+  background-image: url("https://i.imgur.com/ZKbTehq.jpg")
 }
 
 #marcus-jun-card{
-  background-image: url("https://i.imgur.com/ZKbTehq.jpg")
+  background-image: url("")
 }
 
 .view-profile-div {
