--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ a:visited {
 
 #marcus-jun-cover{
   background-image: url("https://i.imgur.com/ZKbTehq.jpg")
+  background-image: url("https://i.imgur.com/bhi8yf5.jpg")
 }
 
 #marcus-jun-card{
