--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ a:visited {
 }
 
 #marcus-jun-card{
-  background-image: url("")
+  background-image: url("https://i.imgur.com/q0s3WV8.jpg")
 }
 
 .view-profile-div {
