--- a/css/styles.css
+++ b/css/styles.css
@@ -164,9 +164,7 @@ a:visited {
 }
 
 #marcus-jun-cover{
-  /*background-image: url("https://i.imgur.com/ZKbTehq.jpg");*/
-  /*background-image: url("https://i.imgur.com/7jvuPyS.jpg");*/
-  background-image: url("https://i.imgur.com/bhi8yf5.jpg");
+  background-image: url("https://i.imgur.com/7jvuPyS.jpg");
 }
 
 #marcus-jun-card{
